[package]
name = "sbus"
version = "0.3.0"
authors = ["Ze'ev Klapow <zklapow@gmail.com>", "Peter Krull"]
repository = "https://github.com/zklapow/sbus"
categories = ["embedded-hal", "embedded", "no-std", "parser-implementations", "science::robotics"]
license = "Apache-2.0"
maintenance = { status = "actively-developed" }
description = "A simple parser for the SBUS RC protocol, with optional embedded-hal UART support"
edition = "2021"

[dependencies]


[dev-dependencies]
hex-literal = "0.4"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
